--- a/test/Bun.Toolkit.Test/Bun.Toolkit.Test.csproj
+++ b/test/Bun.Toolkit.Test/Bun.Toolkit.Test.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Bun.Toolkit.Net\Bun.Toolkit.Net.csproj" />
+    <ProjectReference Include="..\..\src\Bun.Toolkit\Bun.Toolkit.csproj" />
   </ItemGroup>
+
 </Project>
